improved mobile UX, and fixed overflow on home and work

--- a/portfolio/static/assets/css/main.css
+++ b/portfolio/static/assets/css/main.css
@@ -1093,8 +1093,6 @@
 
 	#main {
 		position: relative;
-		display: flex;
-		flex-direction: column;
 		overflow: auto;
 	}
 
@@ -1381,7 +1379,7 @@
 			#me {
 				padding: 0;
 				height: 20em;
-				overflow: auto;
+				overflow: hidden;
 			}
 
 				#me .pic {
